cleanup: added prettier and applied consistent styling rules

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,12 +1,12 @@
-
-
-
 <main class="main">
-     <nav>
-          <a href="/">Vehicle List</a>
-          |
-          <a href="/cart">Cart</a>
-     </nav>
-     <router-outlet />
+  <nav>
+    <a href="/">Vehicle List</a>
+    |
+    <a href="/cart">Cart</a>
+    |
+    <a href="/login">Login</a>
+    |
+    <a href="/signup">Sign up</a>
+  </nav>
+  <router-outlet />
 </main>
-
