feat: list of items in cart
- add cart-item component
- add cart-item-form component
- add order component

--- a/src/app/cart/cart.html
+++ b/src/app/cart/cart.html
@@ -1,4 +1,7 @@
-     
-     <p>lul</p>
-
-
+@for (cartItem of cartItems$ | async; track $index) {
+  <div class="card">
+    <app-cart-item [item]="cartItem" [vehicleItem]="vehicles$ | async" />
+    <app-cart-item-form [cartItemId]="cartItem.id"/>
+    <app-order [id]="cartItem.id"/>
+  </div>
+}
