--- a/src/app/vehicle-list/vehicle-list.html
+++ b/src/app/vehicle-list/vehicle-list.html
@@ -1,7 +1,6 @@
-@for(vehicle of vehicles$ | async; track $index){
-          <div class="card">
-               <vehicle [index]=vehicle/>
-               <vehicle-form/>
-               
-          </div>
-     }
+@for (vehicle of vehicles$ | async; track $index) {
+  <div class="card">
+    <vehicle [item]="vehicle" />
+    <vehicle-form [item]="vehicle" />
+  </div>
+}
