--- a/src/app/vehicle/vehicle.html
+++ b/src/app/vehicle/vehicle.html
@@ -1,5 +1,5 @@
 <div>
-  <h3>{{ vehicle()!.type }}</h3>
-  <p>{{ vehicle()!.brand }} {{ vehicle()!.model }}</p>
+  <h2>{{ vehicle()!.brand }} {{ vehicle()!.model }}</h2>
+  <p>{{ vehicle()!.type }}</p>
   <p>Price per day: {{ vehicle()!.pricePerDay }}€</p>
 </div>
