feat: vehicle data added to cartItem, added address choice to cartItemPage

--- a/src/app/cart-item/cart-item.html
+++ b/src/app/cart-item/cart-item.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <h3>{{ vehicle()!.brand }} {{ vehicle()!.model }}</h3>
+  <h3>{{ cartItem()!.brand }} {{ cartItem()!.model }}</h3>
   <p>Rental period: {{ cartItem()!.time }}</p>
   <p>Quantity: {{ cartItem()!.quantity }}</p>
   <p>Total: {{ cartItem()!.price }}</p>
