--- a/src/app/cart-item-form/cart-item-form.html
+++ b/src/app/cart-item-form/cart-item-form.html
@@ -22,5 +22,15 @@
         (ngModelChange)="quantChange()"
       />
     </label>
+    <select #address (change)="onSelect(address.value)">
+      <option></option>
+      @for (address of addresses$ | async; track address.id) {
+        <option [value]="address.id">
+          {{ address.name }} {{ address.firstName }}, {{ address.street }}
+          {{ address.houseNumber }}, {{ address.zip }} {{ address.city }}
+        </option>
+      }
+    </select>
+    <button (click)="popupOpen()">Different Address?</button>
   </form>
 </div>
