feat: added profile page and ability to change, delete and add more addresses

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,9 +4,13 @@
     |
     <a href="/cart">Cart</a>
     |
+    <a href="/orders">Orders</a>
+    |
     <a href="/login">Login</a>
     |
     <a href="/signup">Sign up</a>
+    |
+    <a href="/profile">Profile</a>
   </nav>
   <router-outlet />
 </main>
