--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@ body {
 body {
   text-align: center;
   font:
-    100% 'Abel',
+    100% 'Roboto Mono',
     sans-serif;
   background-size: cover;
   background: whitesmoke;
