--- a/src/app/feature-cart/order-popup/order-popup.css
+++ b/src/app/feature-cart/order-popup/order-popup.css
@@ -1,9 +1,38 @@
-div.cart-item-container {
-  display: flex;
-  justify-content: center;
+.card {
+  max-width: 800px;
+  margin: 60px auto;
+  padding: 40px 30px;
+  border-radius: 12px;
+  box-shadow:
+    inset -10px -10px 10px rgba(108, 108, 108, 0.44),
+    inset 10px 10px 10px rgba(89, 89, 99, 0.13);
+  background: var(--main-color);
+  text-align: center;
+  color: white;
+  z-index: 9999;
+  position: relative;
 }
-input {
-  margin: 5px;
+
+.bkg {
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  align-self: center;
+  top: 0;
+}
+.exit {
+  top: 5px;
+  right: 10px;
+  position: absolute;
+}
+
+.exit h1 {
+  margin: 0;
+}
+
+h3 {
+  color: var(--accent-color);
 }
 
 button {
@@ -13,7 +42,6 @@ button {
   box-shadow:
     inset -5px -5px 10px rgba(108, 108, 108, 0.44),
     inset 5px 5px 10px rgba(89, 89, 99, 0.13);
-  padding: 10px 20px;
   margin: 3px;
 }
 select {
@@ -23,8 +51,7 @@ select {
     inset -5px -5px 10px rgba(108, 108, 108, 0.44),
     inset 5px 5px 10px rgba(89, 89, 99, 0.13);
   color: var(--accent-color);
-  padding: 5px;
-  margin-right: 10px;
+  margin: 3px;
 }
 
 input {
@@ -35,16 +62,9 @@ input {
     inset 5px 5px 10px rgba(149, 149, 165, 0.13);
   color: var(--accent-color);
   padding: 10px;
-}
-
-button:hover {
-  cursor: pointer;
+  margin: 3px;
 }
 
 input:hover {
-  cursor: pointer;
-}
-
-select:hover {
   cursor: pointer;
 }
